# geodesic-sandbox

./: .gitignore  CMakeLists.txt  LICENSE
python/: .gitignore  plot_eigenstuff.py  plot_stuff.py
python/benchmarks/: igl_exact.txt  igl_heat.txt  vtk_dijkstra.txt
python/benchmarks/sphere_100/: igl_cached_heat.txt  igl_exact.txt  igl_heat.txt  memory.txt  meshfim.txt  meshfim_arbitrary.txt  vtk_dijkstra.txt
python/benchmarks/sphere_150/: igl_exact.txt  igl_heat.txt  memory.txt  vtk_dijkstra.txt
python/benchmarks/sphere_200/: igl_exact.txt  igl_heat.txt  memory.txt  vtk_dijkstra.txt
python/ply/: m03_L_femur_SIMPLIFIED.ply  sphere_150.ply  sphere_200.ply
python/threepoint/: plot_angle_error.py  plot_dist_error.py  plot_gradmag_error.py
src/: geoapprox.cpp  igltest.cpp  main.cpp
